Fix blue blob overflow

--- a/src/styles/hero.css
+++ b/src/styles/hero.css
@@ -1,3 +1,7 @@
+.hero-wrapper {
+  overflow: hidden;
+}
+
 .section-hero {
   display: flex;
   flex-direction: column;
@@ -51,15 +55,6 @@
     font-size: 48px;
   }
 
-  .img-hero-wrapper {
-    width: 800px;
-    height: 500px;
-  }
-
-  .img-hero {
-    position: absolute;
-  }
-
   .section-hero .bg-blue {
     left: 30%;
   }
@@ -70,22 +65,7 @@
     padding: 0;
   }
 
-  .img-hero-wrapper {
-    height: 550px;
-  }
-
-  .img-hero {
-    left: 10%;
-  }
-
   .section-hero .bg-blue {
     bottom: -10%;
-  }
-}
-
-@media (min-width: 1600px) {
-  .img-hero {
-    width: 110%;
-    height: 110%;
   }
 }
